Basic styles for toolbar filter, spacing and retina bug fixes

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -108,7 +108,7 @@
       }
 
       .site-links {
-        width: 466px;
+        width: 380px;
         padding-right: 20px;
         display: block;
         overflow: hidden;
